Add Countdown timer, ClockFace, and refactor Timer functionality. Used OOP design to make timer class the source of truth for elapsed time as milliseconds.
Refactored codebase to be extendable, for future timer type support e.g Countdown